--- a/package.json
+++ b/package.json
@@ -1,30 +1,46 @@
 {
-  "name": "youtube-searcher",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "axios": "^0.18.0",
-    "body-parser": "^1.18.3",
-    "cors": "^2.8.5",
-    "express": "^4.16.4",
-    "mongoose": "^5.4.19",
-    "react": "^16.7.0",
-    "react-dom": "^16.7.0",
-    "react-scripts": "2.1.3"
-  },
+  "name": "Youtube_full",
+  "version": "0.0.1",
+  "description": "YoutubeClone application",
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "server": "babel-node server/app.js",
+    "webpack-devserver": "webpack-dev-server --debug --hot --devtool eval-source-map --output-pathinfo --watch --colors --inline --content-base public --port 8090 --host 0.0.0.0"
   },
-  "eslintConfig": {
-    "extends": "react-app"
+  "author": {
+    "name": "Khrystyna Landvyovych",
+    "email": "crofty.land@gmail.com",
+    "url": "https://github.com/croftyland"
   },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ]
+  "dependencies": {
+    "axios": "^0.9.1",
+    "body-parser": "^1.12.3",
+    "classnames": "^2.2.3",
+    "cors": "*",
+    "events": "^1.1.0",
+    "express": "*",
+    "flux": "^2.1.1",
+    "jquery": "*",
+    "keymirror": "^0.1.1",
+    "less": "^2.6.0",
+    "lodash": "^4.17.5",
+    "mongoose": "*",
+    "react": "^0.14.6",
+    "react-dom": "^0.14.6",
+    "react-masonry-component": "^4.0.0",
+    "youtube-api-search": "0.0.5"
+  },
+  "devDependencies": {
+    "autoprefixer-loader": "*",
+    "babel": "5.x",
+    "babel-loader": "5.*",
+    "css-loader": "^0.22.0",
+    "file-loader": "^0.8.5",
+    "json-loader": "^0.5.4",
+    "less-loader": "^2.2.2",
+    "react-hot-loader": "^1.3.0",
+    "style-loader": "^0.13.0",
+    "url-loader": "^0.5.6",
+    "webpack": "^1.12.12",
+    "webpack-dev-server": "^1.14.1"
+  }
 }
